# opendds-mqtt-examples

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
common/: ArgParser.h  CMakeLists.txt  MqttMessage.idl  NopDataReaderListener.h  opendds.h  tasmota.h  tasmota.idl
generic-approach/: CMakeLists.txt
generic-relay/: CMakeLists.txt  generic-relay.cpp  tasmota-toggle.cpp
idl-relay/: CMakeLists.txt  idl-relay.cpp  tasmota-limit.cpp
